fix wrapping of current page indicator (manicule)

--- a/static/css/bootstrap-subset.css
+++ b/static/css/bootstrap-subset.css
@@ -90,6 +90,10 @@ nav {
 .nav-link {
   padding: 0.5rem 0.5rem;
   font-size: 20px;
+  overflow-wrap: normal;
+}
+.nav-link span {
+  display: inline-block;
 }
 
 .jumbotron {
